// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxGroup renders correctly horizontal 1`] = `
<DocumentFragment>
  <div
    class="ant-checkbox-group horizontal css-dev-only-do-not-override-5wsri9"
  >
    <div
      class="options"
    >
      <label
        class="ant-checkbox-wrapper checkbox css-dev-only-do-not-override-5wsri9"
      >
        <span
          class="ant-checkbox ant-wave-target css-dev-only-do-not-override-5wsri9"
        >
          <input
            class="ant-checkbox-input"
            type="checkbox"
            value="1"
          />
          <span
            class="ant-checkbox-inner"
          />
        </span>
        <span>
          <div
            class="checkboxContent"
          >
            <div
              class="ant-typography bodyS css-dev-only-do-not-override-5wsri9"
              role="paragraph"
            >
              checkbox 1
            </div>
          </div>
        </span>
      </label>
      <label
        class="ant-checkbox-wrapper checkbox css-dev-only-do-not-override-5wsri9"
      >
        <span
          class="ant-checkbox ant-wave-target css-dev-only-do-not-override-5wsri9"
        >
          <input
            class="ant-checkbox-input"
            type="checkbox"
            value="2"
          />
          <span
            class="ant-checkbox-inner"
          />
        </span>
        <span>
          <div
            class="checkboxContent"
          >
            <div
              class="ant-typography bodyS css-dev-only-do-not-override-5wsri9"
              role="paragraph"
            >
              checkbox 2
            </div>
          </div>
        </span>
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CheckboxGroup renders correctly when disabled 1`] = `
<DocumentFragment>
  <div
    class="ant-checkbox-group css-dev-only-do-not-override-5wsri9"
  >
    <div
      class="options"
    >
      <label
        class="ant-checkbox-wrapper ant-checkbox-wrapper-disabled checkbox css-dev-only-do-not-override-5wsri9"
      >
        <span
          class="ant-checkbox ant-wave-target css-dev-only-do-not-override-5wsri9 ant-checkbox-disabled"
        >
          <input
            class="ant-checkbox-input"
            disabled=""
            type="checkbox"
            value="1"
          />
          <span
            class="ant-checkbox-inner"
          />
        </span>
        <span>
          <div
            class="checkboxContent"
          >
            <div
              class="ant-typography bodyS css-dev-only-do-not-override-5wsri9"
              role="paragraph"
            >
              checkbox 1
            </div>
          </div>
        </span>
      </label>
      <label
        class="ant-checkbox-wrapper ant-checkbox-wrapper-disabled checkbox css-dev-only-do-not-override-5wsri9"
      >
        <span
          class="ant-checkbox ant-wave-target css-dev-only-do-not-override-5wsri9 ant-checkbox-disabled"
        >
          <input
            class="ant-checkbox-input"
            disabled=""
            type="checkbox"
            value="2"
          />
          <span
            class="ant-checkbox-inner"
          />
        </span>
        <span>
          <div
            class="checkboxContent"
          >
            <div
              class="ant-typography bodyS css-dev-only-do-not-override-5wsri9"
              role="paragraph"
            >
              checkbox 2
            </div>
          </div>
        </span>
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CheckboxGroup renders correctly with base props 1`] = `
<DocumentFragment>
  <div
    class="ant-checkbox-group css-dev-only-do-not-override-5wsri9"
  >
    <div
      class="options"
    >
      <label
        class="ant-checkbox-wrapper checkbox css-dev-only-do-not-override-5wsri9"
      >
        <span
          class="ant-checkbox ant-wave-target css-dev-only-do-not-override-5wsri9"
        >
          <input
            class="ant-checkbox-input"
            type="checkbox"
            value="1"
          />
          <span
            class="ant-checkbox-inner"
          />
        </span>
        <span>
          <div
            class="checkboxContent"
          >
            <div
              class="ant-typography bodyS css-dev-only-do-not-override-5wsri9"
              role="paragraph"
            >
              checkbox 1
            </div>
          </div>
        </span>
      </label>
      <label
        class="ant-checkbox-wrapper checkbox css-dev-only-do-not-override-5wsri9"
      >
        <span
          class="ant-checkbox ant-wave-target css-dev-only-do-not-override-5wsri9"
        >
          <input
            class="ant-checkbox-input"
            type="checkbox"
            value="2"
          />
          <span
            class="ant-checkbox-inner"
          />
        </span>
        <span>
          <div
            class="checkboxContent"
          >
            <div
              class="ant-typography bodyS css-dev-only-do-not-override-5wsri9"
              role="paragraph"
            >
              checkbox 2
            </div>
          </div>
        </span>
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CheckboxGroup renders correctly with descriptions 1`] = `
<DocumentFragment>
  <div
    class="ant-checkbox-group css-dev-only-do-not-override-5wsri9"
  >
    <div
      class="options"
    >
      <label
        class="ant-checkbox-wrapper checkbox css-dev-only-do-not-override-5wsri9"
      >
        <span
          class="ant-checkbox ant-wave-target css-dev-only-do-not-override-5wsri9"
        >
          <input
            class="ant-checkbox-input"
            type="checkbox"
            value="1"
          />
          <span
            class="ant-checkbox-inner"
          />
        </span>
        <span>
          <div
            class="checkboxContent"
          >
            <div
              class="ant-typography bodyS css-dev-only-do-not-override-5wsri9"
              role="paragraph"
            >
              checkbox 1
            </div>
            <div
              class="ant-typography bodyS css-dev-only-do-not-override-5wsri9"
              role="paragraph"
            >
              description 1
            </div>
          </div>
        </span>
      </label>
      <label
        class="ant-checkbox-wrapper checkbox css-dev-only-do-not-override-5wsri9"
      >
        <span
          class="ant-checkbox ant-wave-target css-dev-only-do-not-override-5wsri9"
        >
          <input
            class="ant-checkbox-input"
            type="checkbox"
            value="1"
          />
          <span
            class="ant-checkbox-inner"
          />
        </span>
        <span>
          <div
            class="checkboxContent"
          >
            <div
              class="ant-typography bodyS css-dev-only-do-not-override-5wsri9"
              role="paragraph"
            >
              checkbox 1
            </div>
            <div
              class="ant-typography bodyS css-dev-only-do-not-override-5wsri9"
              role="paragraph"
            >
              description 2
            </div>
          </div>
        </span>
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CheckboxGroup renders correctly with partially disabled options 1`] = `
<DocumentFragment>
  <div
    class="ant-checkbox-group css-dev-only-do-not-override-5wsri9"
  >
    <div
      class="options"
    >
      <label
        class="ant-checkbox-wrapper ant-checkbox-wrapper-disabled checkbox css-dev-only-do-not-override-5wsri9"
      >
        <span
          class="ant-checkbox ant-wave-target css-dev-only-do-not-override-5wsri9 ant-checkbox-disabled"
        >
          <input
            class="ant-checkbox-input"
            disabled=""
            type="checkbox"
            value="1"
          />
          <span
            class="ant-checkbox-inner"
          />
        </span>
        <span>
          <div
            class="checkboxContent"
          >
            <div
              class="ant-typography bodyS css-dev-only-do-not-override-5wsri9"
              role="paragraph"
            >
              checkbox 1
            </div>
            <div
              class="ant-typography bodyS css-dev-only-do-not-override-5wsri9"
              role="paragraph"
            >
              description 1
            </div>
          </div>
        </span>
      </label>
      <label
        class="ant-checkbox-wrapper checkbox css-dev-only-do-not-override-5wsri9"
      >
        <span
          class="ant-checkbox ant-wave-target css-dev-only-do-not-override-5wsri9"
        >
          <input
            class="ant-checkbox-input"
            type="checkbox"
            value="1"
          />
          <span
            class="ant-checkbox-inner"
          />
        </span>
        <span>
          <div
            class="checkboxContent"
          >
            <div
              class="ant-typography bodyS css-dev-only-do-not-override-5wsri9"
              role="paragraph"
            >
              checkbox 1
            </div>
            <div
              class="ant-typography bodyS css-dev-only-do-not-override-5wsri9"
              role="paragraph"
            >
              description 2
            </div>
          </div>
        </span>
      </label>
    </div>
  </div>
</DocumentFragment>
`;
